--- a/EVENTS/One.html
+++ b/EVENTS/One.html
@@ -14,7 +14,7 @@
             <li>
                 <h1>Amazing images</h1>
                 <img width="200px" id="photoshop"
-                    src="https://images.pexels.com/photos/3561339/pexels-photo-3561339.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
+                    src="https://images.pexels.com/photos/3561339/pexels-photo- 3561339.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
                     alt="photoshop" />
             </li>
             <li>
